# backend/src/modules/student/student.controller.ts
@@ -58,27 +58,27 @@ export class StudentController {
   }
 
   // Applications
-  @UseGuards(JwtAuthGuard, RolesGuard)
-  @Roles('student')
-  @Get('applications')
-  @ApiOperation({ summary: 'Get student applications' })
-  @ApiResponse({ status: 200, description: 'Applications retrieved successfully.' })
-  async getApplications(@Req() req: any) {
-    const userId = req.user.sub;
-    return this.studentService.getMyApplications(userId);
-  }
-  @UseGuards(JwtAuthGuard, RolesGuard)
-  @Roles('student')
-  @ApiOperation({ summary: 'Cancel a student application' })
-  @ApiResponse({ status: 200, description: 'Application canceled successfully.' })
-  @Delete('applications/:resourceId')
-  async cancelApplication(
-    @Req() req: any,
-    @Param('resourceId') resourceId: string
-  ) {
-    const userId = req.user.sub;
-    return this.studentService.cancelApplication(userId, resourceId);
-  }
+  // @UseGuards(JwtAuthGuard, RolesGuard)
+  // @Roles('student')
+  // @Get('applications')
+  // @ApiOperation({ summary: 'Get student applications' })
+  // @ApiResponse({ status: 200, description: 'Applications retrieved successfully.' })
+  // async getApplications(@Req() req: any) {
+  //   const userId = req.user.sub;
+  //   return this.studentService.getMyApplications(userId);
+  // }
+  // @UseGuards(JwtAuthGuard, RolesGuard)
+  // @Roles('student')
+  // @ApiOperation({ summary: 'Cancel a student application' })
+  // @ApiResponse({ status: 200, description: 'Application canceled successfully.' })
+  // @Delete('applications/:resourceId')
+  // async cancelApplication(
+  //   @Req() req: any,
+  //   @Param('resourceId') resourceId: string
+  // ) {
+  //   const userId = req.user.sub;
+  //   return this.studentService.cancelApplication(userId, resourceId);
+  // }
 
 
 
